# WebRTC

./: LICENSE  README.md  freeswitch.service  install_softwares.sh  keys  main.tf  terraform.tfvars
chat/dadeye/dadeye/: ContentView.swift  dadeyeApp.swift  dadeyeRelease.entitlements  dadeyecbridge.mm
chat/dadeye/dadeye.xcodeproj/: project.pbxproj
chat/dadeye/dadeye.xcodeproj/project.xcworkspace/xcuserdata/eliassun.xcuserdatad/: UserInterfaceState.xcuserstate
chat/dadeye/dadeye.xcodeproj/xcuserdata/eliassun.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
chat/dadeye/dadeye.xcodeproj/xcuserdata/eliassun.xcuserdatad/xcschemes/: xcschememanagement.plist
chat/dadeye/dadeye/Assets.xcassets/AppIcon.appiconset/: Contents.json
chat/dadeye/dadeye/cplus/: dadeye-Bridging-Header.h  dadeyewrapper.h  main.hpp
chat/dadeye/dadeye/csrc/: capture.cpp  capture.h  main.cpp  parse_cl.cpp
chat/dadeye/dadeyeTests/: dadeyeTests.swift
chat/dadeye/dadeyeUITests/: dadeyeUITests.swift  dadeyeUITestsLaunchTests.swift
chat/picap/: CMakeLists.txt  build.py  build.sh  capture.cpp  capture.h  main.cpp  parse_cl.cpp  parse_cl.h
chat/sig/: sig.py
conf/: vars.xml
conf/autoload_configs/: switch.conf.xml
conf/sip_profiles/: internal.xml
etc/apache2/: default-ssl.conf
sip4webrtc/: settings.gradle
sip4webrtc/app/: build.gradle
sip4webrtc/app/src/androidTest/java/com/voipeye/sip4webrtc/: ExampleInstrumentedTest.java
sip4webrtc/app/src/main/: AndroidManifest.xml
sip4webrtc/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
sip4webrtc/app/src/main/cpp/pjsip/arm64-v8a/include/pj/: config.h  config_site_sample.h
sip4webrtc/app/src/main/cpp/pjsip/arm64-v8a/include/pj/compat/: os_auto.h
sip4webrtc/app/src/main/cpp/pjsip/arm64-v8a/include/pjsip/: sip_config.h
sip4webrtc/app/src/main/cpp/pjsip/armeabi-v7a/include/pj/: config_site.h
sip4webrtc/app/src/main/cpp/pjsip/x86/armeabi-v7a/include/pj/: config_site.h
sip4webrtc/app/src/main/cpp/pjsip/x86/armeabi-v7a/include/pj/compat/: m_auto.h  os_auto.h
sip4webrtc/app/src/main/cpp/pjsip/x86/include/pj/: config_site.h
sip4webrtc/app/src/main/cpp/pjsip/x86/include/pj/compat/: os_auto.h
sip4webrtc/app/src/main/cpp/pjsip/x86/lib/pkgconfig/: libpjproject.pc
sip4webrtc/app/src/main/cpp/pjsip/x86_64/include/pj/: config_site.h
sip4webrtc/app/src/main/cpp/pjsip/x86_64/include/pj/compat/: os_auto.h
sip4webrtc/app/src/main/cpp/pjsip/x86_64/lib/pkgconfig/: libpjproject.pc
sip4webrtc/app/src/main/cpp/wrapper/: logger.cpp
sip4webrtc/app/src/main/cpp/wrapper/include/: logger.h  sip.h
sip4webrtc/app/src/main/java/com/voipeye/sip4webrtc/: AppLog.java  Logger.java  MainActivity.java
sip4webrtc/app/src/main/res/values/: strings.xml  themes.xml
sip4webrtc/app/src/main/res/values-night/: themes.xml
sip4webrtc/app/src/test/java/com/voipeye/sip4webrtc/: ExampleUnitTest.java
sip4webrtc/gradle/wrapper/: gradle-wrapper.properties
verto/fs1.8/: bower.json
